# V4LCtrl

./: AUTHORS  CMakeLists.txt  Makefile.in  ProjectHome.md  README.md  build_32  install  libv4lwrapper  v4lCtrlGUI.kdevelop.pcs  v4lctrl.kdevelop  v4lctrl.kdevelop.pcs  v4lctrl.kdevses  v4lctrlgui.kdev4  v4lctrlgui.kdevses  v4lctrlgui.pro
.kdev4/: v4lctrlgui.kdev4
autom4te.cache/: output.0  output.1  requests
scripts/: mplayer-libv4l  skype-libv4l
src/: Makefile.in  v4lctrl.c  v4lctrl.h
tags/0.1.0/: configure.in  v4lctrl.kdevelop.pcs
tags/0.1.0/autom4te.cache/: traces.0
tags/0.2.0/: README  configure
tags/0.2.0/autom4te.cache/: requests
tags/0.2.0/src/: v4lctrl_32
tags/0.2.2/: v4lctrl.kdevelop.pcs
tags/0.2.2/src/: Makefile.am
tags/0.2.3/: Doxyfile
tags/0.2.3/autom4te.cache/: traces.1
tags/0.2.3/src/: v4lctrl.c
tags/0.2.9/: compile  v4lctrlgui.kdevelop  v4lctrlgui.kdevses
tags/0.2.9/v4lctrl/: libv4lctrl.c
tags/0.2.9/v4lctrlgui/: mainwindow.ui  v4lctrlgui.h
tags/0.3.0/: Doxyfile  v4lctrlgui.kdev4
tags/0.3.0/v4lctrlcli/: struct-v4l2.c
tags/0.3.0/v4lctrlgui/: cfunct.h
templates/: h
trunk/v4lctrl/: v4lctrl.pro
trunk/v4lctrlcli/: struct-v4l.c  v4lctrlcli.h
trunk/v4lctrlgui/: errordialog.ui  mainwindow.ui  qidslider.cpp  src.pro  v4lctrlgui.cpp
v4lctrl/: CMakeLists.txt  libv4lctrl.c  libv4lctrl.h
v4lctrlcli/: CMakeLists.txt  struct-dump.c  struct-v4l2.c  v4lctrlcli.c  v4lctrlcli.h  v4lctrlcli.pro
v4lctrlgui/: CMakeLists.txt  application.qrc  cfunct.cpp  controlwrappers.cpp  controlwrappers.h  errordialog.cpp  errordialog.h  main.cpp  moc_idsignalmapper.cpp  qidslider.cpp  qidslider.h  selectdevice.ui  selectdevicedialog.cpp  selectdevicedialog.h  v4lctrlgui.cpp  v4lctrlgui.h  v4lctrlgui.pro
